<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/light_gray">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="@color/login_background">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_margin="20dp">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:gravity="center_vertical">

				<ImageView android:layout_width="32dp"
					android:layout_height="32dp" android:layout_marginRight="5dp"
					android:src="@drawable/icon" />

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/app_name"
					android:textStyle="bold" android:textColor="@color/light_gray"
					android:textSize="18sp" />

			</LinearLayout>

			<TextView android:id="@+id/login_account_title"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/login_account" android:textColor="@color/light_gray"
				android:layout_marginTop="5dp" android:layout_marginBottom="5dp" />

			<LinearLayout android:id="@+id/account_container"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical" />

			<LinearLayout android:id="@+id/another_container_title"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_marginTop="20dp">

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/login_another"
					android:textStyle="bold" android:textColor="@color/light_gray" />

				<TextView android:id="@+id/another_account_info"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:text="@string/login_another_info" android:textColor="@color/light_gray"
					android:layout_marginBottom="5dp" />

				<Button android:id="@+id/btn_another_method"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:text="@string/login_another" />

			</LinearLayout>

			<LinearLayout android:id="@+id/another_container"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical" android:visibility="gone">

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/login_welcome"
					android:textColor="@color/light_gray" android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp" />

				<EditText android:id="@+id/edit_login_id" android:hint="@string/login_id"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:singleLine="true" android:textColorHint="@color/gray" />

				<EditText android:id="@+id/edit_password" android:hint="@string/login_password"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:inputType="textPassword" android:singleLine="true"
					android:textColorHint="@color/gray" />

				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:orientation="horizontal"
					android:layout_marginTop="5dp" android:layout_marginBottom="5dp">

					<Button android:id="@+id/btn_cancel" android:layout_height="wrap_content"
						android:layout_width="0dp" android:layout_weight="1"
						android:text="@android:string/cancel" />

					<Button android:id="@+id/btn_login" android:layout_height="wrap_content"
						android:layout_width="0dp" android:layout_weight="1"
						android:text="@string/txt_login" />

				</LinearLayout>

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/login_oauth"
					android:textColor="@color/light_gray" android:layout_marginBottom="5dp" />

				<Button android:id="@+id/btn_oauth" android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:text="@string/login_google_authentication" />

			</LinearLayout>

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:background="@color/light_gray" android:padding="20dp">

			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/login_getting_started_text"
				android:textColor="#333" android:layout_marginBottom="5dp" />

			<Button android:id="@+id/btn_getting_started"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/login_getting_started" />

		</LinearLayout>

	</LinearLayout>

</ScrollView>
